--- a/README
+++ b/README
@@ -5,15 +5,27 @@ This gem gets XML from crossref and gives you a nice ruby object to work with.
 
 Requires nokogiri
 
+
+
 Example:
 
 >> require 'crossref'
 => true
->> paper = Crossref::Metadata.new('10.1021/ie50324a027')
-...
+>> CR = Crossref::Metadata.new(:pid => "you@example.com")
+=> #<Crossref::Metadata:0x1121848 @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=robert@osbornebrook.co.uk", @pid="robert@osbornebrook.co.uk", @doi=nil>
+
+>> paper = CR.doi('10.1021/ie50324a027')
+=> #<Crossref::Metadata:0x111cd48 @xml=<?xml version="1.0"?>...
+, @url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=robert@osbornebrook.co.uk&id=doi:10.1021/ie50324a027", @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=robert@osbornebrook.co.uk", @pid="robert@osbornebrook.co.uk", @doi="10.1021/ie50324a027">
+
 >> paper.title
 => "Heat Transfer and Pressure Drop of Liquids in Tubes"
->> paper.authors
-=> [{:surname=>"Sieder", :given_name=>"E. N."}, {:surname=>"Tate", :given_name=>"G. E."}]
+
 >> paper.journal
-=> {:title=>"Industrial & Engineering Chemistry"}
+=> {:volume=>"28", :issue=>"12", :first_page=>"1429", :last_page=>"1435", :title=>"Ind. Eng. Chem.", :issn=>"0019-7866"}
+
+>> paper.published
+=> {:month=><month>12</month><month>12</month>, :year=><year>1936</year><year>1936</year>}
+
+>> paper.authors
+=> [{:given_name=>"E. N.", :surname=>"Sieder"}, {:given_name=>"G. E.", :surname=>"Tate"}]
