--- a/README.rdoc
+++ b/README.rdoc
@@ -15,26 +15,33 @@ Very early in development, made a specialized applicaiton.
 
 == SYNOPSIS:
 
->> require 'crossref'
-=> true
->> CR = Crossref::Metadata.new(:pid => "you@example.com")
-=> #<Crossref::Metadata:0x1121848 @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com", @pid="you@example.com", @doi=nil>
+$>> require 'crossref'
+$=> true
 
->> paper = CR.doi('10.1021/ie50324a027')
-=> #<Crossref::Metadata:0x111cd48 @xml=<?xml version="1.0"?>...
+Create an instance with your crossref pid.
+
+$>> CR = Crossref::Metadata.new(:pid => "you@example.com")
+$=> #<Crossref::Metadata:0x1121848 @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com", @pid="you@example.com", @doi=nil>
+
+Get a paper with a DOI
+
+$>> paper = CR.doi('10.1021/ie50324a027')
+$=> #<Crossref::Metadata:0x111cd48 @xml=<?xml version="1.0"?>...
 , @url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com&id=doi:10.1021/ie50324a027", @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com", @pid="you@example.com", @doi="10.1021/ie50324a027">
 
->> paper.title
-=> "Heat Transfer and Pressure Drop of Liquids in Tubes"
+Get your data:
 
->> paper.journal
-=> {:volume=>"28", :issue=>"12", :first_page=>"1429", :last_page=>"1435", :title=>"Ind. Eng. Chem.", :issn=>"0019-7866"}
+$>> paper.title
+$=> "Heat Transfer and Pressure Drop of Liquids in Tubes"
 
->> paper.published
-=> {:month=><month>12</month><month>12</month>, :year=><year>1936</year><year>1936</year>}
+$>> paper.journal
+$=> {:volume=>"28", :issue=>"12", :first_page=>"1429", :last_page=>"1435", :title=>"Ind. Eng. Chem.", :issn=>"0019-7866"}
 
->> paper.authors
-=> [{:given_name=>"E. N.", :surname=>"Sieder"}, {:given_name=>"G. E.", :surname=>"Tate"}]
+$>> paper.published
+$=> {:month=><month>12</month><month>12</month>, :year=><year>1936</year><year>1936</year>}
+
+$>> paper.authors
+$=> [{:given_name=>"E. N.", :surname=>"Sieder"}, {:given_name=>"G. E.", :surname=>"Tate"}]
 
 == REQUIREMENTS:
 
