--- a/README.rdoc
+++ b/README.rdoc
@@ -7,41 +7,45 @@
 Crossref - A ruby way to work with DOI metadata from crossref.org
 
 You can get info on many academic articles via DOI. 
-This gem gets XML from crossref and gives you a nice ruby object to work with.
+This gem gets XML from crossref openurl and gives you a nice ruby object to work with.
+
+More information at:
+http://crossref.org
+http://crossref.org/openurl
 
 == FEATURES/PROBLEMS:
 
-Very early in development, made a specialized applicaiton. 
+Very early in development, made for a specific application. Hopefully will progress to a more useful library.
 
 == SYNOPSIS:
 
-$>> require 'crossref'
-$=> true
+   >> require 'crossref'
+   => true
 
 Create an instance with your crossref pid.
 
-$>> CR = Crossref::Metadata.new(:pid => "you@example.com")
-$=> #<Crossref::Metadata:0x1121848 @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com", @pid="you@example.com", @doi=nil>
+   >> CR = Crossref::Metadata.new(:pid => "you@example.com")
+   => #<Crossref::Metadata:0x1121848 @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com", @pid="you@example.com", @doi=nil>
 
 Get a paper with a DOI
 
-$>> paper = CR.doi('10.1021/ie50324a027')
-$=> #<Crossref::Metadata:0x111cd48 @xml=<?xml version="1.0"?>...
+  >> paper = CR.doi('10.1021/ie50324a027')
+  => #<Crossref::Metadata:0x111cd48 @xml=<?xml version="1.0"?>...
 , @url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com&id=doi:10.1021/ie50324a027", @base_url="http://crossref.org/openurl/?noredirect=true&format=unixref&pid=you@example.com", @pid="you@example.com", @doi="10.1021/ie50324a027">
 
 Get your data:
 
-$>> paper.title
-$=> "Heat Transfer and Pressure Drop of Liquids in Tubes"
+  >> paper.title
+  => "Heat Transfer and Pressure Drop of Liquids in Tubes"
 
-$>> paper.journal
-$=> {:volume=>"28", :issue=>"12", :first_page=>"1429", :last_page=>"1435", :title=>"Ind. Eng. Chem.", :issn=>"0019-7866"}
+  >> paper.journal
+  => {:volume=>"28", :issue=>"12", :first_page=>"1429", :last_page=>"1435", :title=>"Ind. Eng. Chem.", :issn=>"0019-7866"}
 
-$>> paper.published
-$=> {:month=><month>12</month><month>12</month>, :year=><year>1936</year><year>1936</year>}
+  >> paper.published
+  => {:month=><month>12</month><month>12</month>, :year=><year>1936</year><year>1936</year>}
 
-$>> paper.authors
-$=> [{:given_name=>"E. N.", :surname=>"Sieder"}, {:given_name=>"G. E.", :surname=>"Tate"}]
+  >> paper.authors
+  => [{:given_name=>"E. N.", :surname=>"Sieder"}, {:given_name=>"G. E.", :surname=>"Tate"}]
 
 == REQUIREMENTS:
 
