--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,7 @@
-=== 1.0.0 / 2009-05-06
+
+=== 0.0.2 / 2009-05-07
+* Added dependencies in Rakefile
+=== 0.0.1 / 2009-05-06
 
 * 1 major enhancement
 
